--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "morgan": "^1.10.0",
     "multer": "^1.4.5-lts.1",
     "nodemailer": "^6.10.0",
+    "shurjopay": "^0.12.1",
     "stripe": "^17.6.0",
     "zod": "^3.23.8"
   },
